--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://gkudos.github.io/qgis-cartodb" # the base hostname & protocol for your site
+baseurl: "/qgis-cartodb" # the subpath of your site, e.g. /blog/
+url: "http://gkudos.github.io" # the base hostname & protocol for your site
 twitter_username: gkudos
 github_username:  gkudos
 
