--- a/_config.yml
+++ b/_config.yml
@@ -2,11 +2,11 @@
 title: QGIS CartoDB
 email: info@gkudos.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+    The best of your desktop GIS with<br/>the best of the web GIS.
 baseurl: "/qgis-cartodb" # the subpath of your site, e.g. /blog/
 url: "http://gkudos.github.io" # the base hostname & protocol for your site
+
+facebook_username: gkudos
 twitter_username: gkudos
 github_username:  gkudos
 
